[package]
name = "my-redis"
version = "0.1.0"
authors = ["Nelson Germán Ghezzi <nelsonghezzi@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
mini-redis = "0.2"
bytes = "0.5"

[[bin]]
name = "server"
path = "server/src/main.rs"

[[bin]]
name = "client"
path = "client/src/main.rs"